Wed Nov  4 11:31:57 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-socket.c (gtk_socket_filter_func): Call 
	gdk_window_destroy_notify() on a DestroyNotify, so
	that the window gets removed from the XID table.

1998-11-09  Jeff Garzik  <jgarzik@pobox.com>

        * libgnomeui/Makefile.am,
          libgnomeui/gnome-dateedit.c, libgnomeui/gtkcalendar.c,
          libgnomeui/gtkcalendar.h, libgnomeui/libgnomeui.h:

                Removed gtkcalendar module.

1998-11-09  Jonathan Blandford  <jrb@aware-of-vacuity.labs.redhat.com>

	* gnome-popup-help.c (gnome_popup_help_expose): added theme'd
	drawing code back to the popup-window.

1998-11-08  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.c (gnome_canvas_group_draw): 
	In determining whether to redraw each child, the group was
	comparing its own bounds to the redraw area on each iteration,
	ignoring the child's bounds. So all children were redrawn in every
	case. Fixed this typo from hell after staying up all night trying
	to figure out why my app was so slow.

1998-11-07  Jeff Garzik  <jgarzik@pobox.com>

	* Makefile.am, libgnomeui.h: removed gnome-lamp.[ch]
	* stock_demo.c: removed ifdef'd gnome_lamp widget code
	* winhints_demo.c: made authors var const-correct
	* gnome-lamp.[ch]: removed (general consensus considers
	  gnome-lamp unused and ugly)

1998-11-05  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.[ch] (gnome_icon_text_item_get_text): New public
	function to query the text from the icon item.

	* gnome-icon-list.c (text_changed): Use gnome_icon_text_item_get_text().

1998-11-05  Chris Lahey  <clahey@umich.edu>

	* pixmaps/Makefile.am (stock_images): 
	* gnome-stock.c: 
	* gnome-stock.h: Added GNOME_STOCK_PIXMAP_INDEX, a small pile of
	documents.

	* pixmaps/stock_index.png: Added this file.  The image for
	GNOME_STOCK_PIXMAP_INDEX.

	* gnome-app.c (gnome_app_set_toolbar): Removed an incorrect #ifdef
	to get flat toolbars to work.
